--- a/app/views/layouts/_nav_links_for_auth.html.erb
+++ b/app/views/layouts/_nav_links_for_auth.html.erb
@@ -1,14 +1,14 @@
 <% if user_signed_in? %>
-  <li class='nav-item'><%= link_to 'Edit account', edit_user_registration_path, class: 'nav-link' %></li>
-  <li class='nav-item'><%= link_to 'Sign out', destroy_user_session_path, :method=>'delete', class: 'nav-link' %></li>
+  <%= link_to 'Edit account', edit_user_registration_path, class: 'dropdown-item' %>
+  <%= link_to 'Sign out', destroy_user_session_path, :method=>'delete', class: 'dropdown-item' %>
 <% else %>
-  <li class='nav-item'><%= link_to 'Sign in', new_user_session_path, class: 'nav-link' %></li>
-  <li class='nav-item'><%= link_to 'Sign up', new_user_registration_path, class: 'nav-link' %></li>
+  <%= link_to 'Sign in', new_user_session_path, class: 'dropdown-item' %>
+  <%= link_to 'Sign up', new_user_registration_path, class: 'dropdown-item' %>
 <% end %>
 <% if user_signed_in? %>
   <% if current_user.try(:admin?) %>
-    <li class='nav-item'><%= link_to 'Admin', '/admin', class: 'nav-link' %></li>
+    <%= link_to 'Admin', '/admin', class: 'dropdown-item' %>
 
-    <li class='nav-item'><%= link_to 'Users', users_path, class: 'nav-link' %></li>
+    <%= link_to 'Users', users_path, class: 'dropdown-item' %>
   <% end %>
 <% end %>
