Finish skill card

--- a/app/views/skills/_form.html.erb
+++ b/app/views/skills/_form.html.erb
@@ -11,10 +11,7 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :user_id %>
-    <%= form.text_field :user_id %>
-  </div>
+  <%= form.hidden_field :user_id, value: @user.id%>
 
   <div class="field">
     <%= form.label :name %>
@@ -22,6 +19,6 @@
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit "Add Skill", class: "btn default-color white-text" %>
   </div>
 <% end %>
