--- a/app/views/user_profiles/edit.html.erb
+++ b/app/views/user_profiles/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form', user_profile: @user_profile %>
 
 <%= link_to 'Show', @user_profile %> |
-<%= link_to 'Back', user_profiles_path %>
+<%= link_to 'Back', root_path %>
