--- a/app/views/users/_skill.html.erb
+++ b/app/views/users/_skill.html.erb
@@ -10,14 +10,18 @@
     <% @skills.each do |skill| %>
       <p class="card-text">
         <%= skill.name %>
-        <%= link_to(skill, method: :delete, data: { confirm: 'Are you sure?' }) do %>
-          <i class="fas fa-trash float-right"></i>
+        <% if current_user == @user %>
+          <%= link_to(skill, method: :delete, data: { confirm: 'Are you sure?' }) do %>
+            <i class="fas fa-trash float-right"></i>
+          <% end %>
         <% end %>
       </p>
       
     <% end%>
     <!-- Button -->
-    <%= render 'skills/form', skill: Skill.new %>
+    <% if current_user == @user %>
+      <%= render 'skills/form', skill: Skill.new %>
+    <% end %>
 
   </div>
 
@@ -26,8 +30,10 @@
 <div>
   <div class="card text-center py-5 px-4">
     <div>
-      <h2 class="card-title h1-responsive pt-3 mb-5 font-bold"><strong>You have not added any skills yet</strong></h2>
-      <%= link_to 'Add Skills', new_skill_path, class: "btn default-color btn-lg white-text"  %>
+      <h2 class="card-title h1-responsive pt-3 mb-5 font-bold"><strong>There are no skills added yet</strong></h2>
+      <% if current_user == @user %>
+        <%= link_to 'Add Skills', new_skill_path, class: "btn default-color btn-lg white-text"  %>
+      <% end %>
     </div>
   </div>
 </div>
