Finish score card

--- a/app/views/users/_skill.html.erb
+++ b/app/views/users/_skill.html.erb
@@ -28,7 +28,7 @@
 </div>
 <% else %>
 <div>
-  <div class="card text-center py-5 px-4">
+  <div class="card text-center py-5 px-4 m-3">
     <div>
       <h2 class="card-title h1-responsive pt-3 mb-5 font-bold"><strong>There are no skills added yet</strong></h2>
       <% if current_user == @user %>
