--- a/app/views/scores/_form.html.erb
+++ b/app/views/scores/_form.html.erb
@@ -12,26 +12,20 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name %>
+    <%= form.label :name, "Metric" %>
+    <%= form.select :name, [ 'Cooperation', 'Goal-oriented', 'Work-ethic'], {prompt: 'Select One'}, {class: "browser-default custom-select"} %>
   </div>
 
   <div class="field">
     <%= form.label :value %>
-    <%= form.number_field :value %>
+    <%= form.number_field :value, class: "form-control" %>
   </div>
 
-  <div class="field">
-    <%= form.label :evaluator_id %>
-    <%= form.text_field :evaluator_id %>
-  </div>
+  <%= form.hidden_field :evaluator_id, value: current_user.id%>
 
-  <div class="field">
-    <%= form.label :user_id %>
-    <%= form.text_field :user_id %>
-  </div>
+  <%= form.hidden_field :user_id, value: @user.id%>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit "Add Score", class: "btn default-color white-text" %>
   </div>
 <% end %>
