--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,6 +7,7 @@
     </div>
     <div class="col-lg-8 col-sm-12 col-md-8" data-aos="fade-up">
         <%= render 'users/skill'%>
+        <%= render 'users/score'%>
     </div>
   </div>
 </div>
