--- a/app/views/users/_score.html.erb
+++ b/app/views/users/_score.html.erb
@@ -1,5 +1,5 @@
 
-<% if @scores %>
+<% if @scores && current_user.admin? %>
 <div class="card m-3">
   <!-- Card content -->
   <div class="card-body">
@@ -23,6 +23,7 @@
       </p>
       
     <% end%>
+    <% unless @scores.empty? %>
     <hr>
     <p class="card-text">
       Average Score: 
@@ -31,23 +32,11 @@
         <i class="fas fa-star mr-3"></i>
       </span>
     </p>
-    <!-- Button -->
-    <% if current_user.admin? %>
-      <%= render 'scores/form', score: Score.new %>
     <% end %>
+    <!-- Button -->
+    <%= render 'scores/form', score: Score.new %>
 
   </div>
 
-</div>
-<% else %>
-<div>
-  <div class="card text-center py-5 px-4 m-3">
-    <div>
-      <h2 class="card-title h1-responsive pt-3 mb-5 font-bold"><strong>There are no scores added yet</strong></h2>
-      <% if true %>
-        <%= link_to 'Add scores', new_score_path, class: "btn default-color btn-lg white-text"  %>
-      <% end %>
-    </div>
-  </div>
 </div>
 <% end %>
