Style all fields

--- a/app/views/skills/_form.html.erb
+++ b/app/views/skills/_form.html.erb
@@ -14,8 +14,8 @@
   <%= form.hidden_field :user_id, value: @user.id%>
 
   <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name %>
+    <%= form.label :name, "Add Skill" %>
+    <%= form.text_field :name, class: "form-control", placeholder: "Type the skill name here" %>
   </div>
 
   <div class="actions">
