Add more metrics

--- a/app/views/scores/_form.html.erb
+++ b/app/views/scores/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= form.label :name, "Metric" %>
-    <%= form.select :name, [ 'Cooperation', 'Goal-oriented', 'Work-ethic'], {prompt: 'Select One'}, {class: "browser-default custom-select"} %>
+    <%= form.select :name, [ 'Cooperation', 'Goal-oriented', 'Work-ethic', 'Web development', 'Language proficiency', 'Programming'], {prompt: 'Select One'}, {class: "browser-default custom-select"} %>
   </div>
 
   <div class="field">
